{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 32,
  "lineage": "d2a5314c-c5e9-96a5-26ce-2ad4a42fa6ee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-15T10:32:44.291-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/groovy-student-475217-a3/global/firewalls/allow-app-traffic",
            "log_config": [],
            "name": "allow-app-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc",
            "priority": 1000,
            "project": "groovy-student-475217-a3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/firewalls/allow-app-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-15T10:32:44.329-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/groovy-student-475217-a3/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc",
            "priority": 1000,
            "project": "groovy-student-475217-a3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/zones/us-central1-a/disks/flask-backend-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "application": "flask-backend",
              "environment": "production"
            },
            "enable_display": false,
            "id": "projects/groovy-student-475217-a3/zones/us-central1-a/instances/flask-backend-instance",
            "instance_id": "7356756867725748316",
            "label_fingerprint": "SWkYi78tR7Q=",
            "labels": {
              "application": "flask-backend",
              "environment": "production"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "true"
            },
            "metadata_fingerprint": "HBlsp2F6s0I=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Log startup\necho \"Starting Flask backend container...\"\n\n# Update system\napt-get update\napt-get install -y ca-certificates curl gnupg\n\n# Add Docker GPG key\ncurl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg\n\n# Add Docker repository\necho \"deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download [...]
            "name": "flask-backend-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.84.4",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "groovy-student-475217-a3"
              }
            ],
            "project": "groovy-student-475217-a3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/zones/us-central1-a/instances/flask-backend-instance",
            "service_account": [
              {
                "email": "flask-backend-sa@groovy-student-475217-a3.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-app",
              "allow-ssh"
            ],
            "tags_fingerprint": "MDI1BHWzDt0=",
            "terraform_labels": {
              "application": "flask-backend",
              "environment": "production"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_firewall.allow_app",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet",
            "google_service_account.compute_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/groovy-student-475217-a3/global/networks/flask-vpc",
            "mtu": 0,
            "name": "flask-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6614520174617131439",
            "project": "groovy-student-475217-a3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-15T10:32:44.298-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/groovy-student-475217-a3/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "groovy-student-475217-a3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-15T10:32:44.283-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/groovy-student-475217-a3/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/global/networks/flask-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "groovy-student-475217-a3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/groovy-student-475217-a3/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}